--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.3",
     "face-api.js": "^0.22.2",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
